--- a/src/pages/Course/Course.css
+++ b/src/pages/Course/Course.css
@@ -1,3 +1,149 @@
-.test{
-    color: black;
+
+
+.welcome-header{
+    background-color: rgb(13, 52, 124);
+
+    padding-bottom: 3%;
+    padding-top: 1%;
+
+
+    display: grid;
+
+}
+.welcome-note{
+    /* text-align: center; */
+    color: whitesmoke;
+
+    padding-left: 5%;
+
+    margin-bottom: 2%;
+
+    /*  */
+}
+
+.stars{
+    color: rgb(247, 247, 9);
+    padding-left: 5%;
+
+}
+
+.lec-pic-name{
+    display: flex;
+}
+.lecturer{
+    height: 3rem;
+    border-radius: 6rem;
+    margin-top: 2%;
+}
+.lec-name{
+    color: whitesmoke;
+    margin-top: 3%;
+    margin-left: 1%;
+
+
+
+
+
+}
+
+.enroll-card{
+    margin-bottom: 9%;
+    background-color: whitesmoke;
+
+    /* position: absolute; */
+    /* top: 10; */
+    /* right: 0; */
+
+
+}
+.enroll-div{
+
+    display: grid;
+    width: 18%;
+    float: right;
+    text-align: center;
+
+
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+
+    margin-right: 5%;
+    margin-bottom: 1%;
+
+    /* padding: 2%; */
+
+    padding-top: 1;
+    padding-bottom: 2%;
+    
+
+
+    /* margin: 5%; */
+
+
+}
+.enroll-h4{
+    padding-bottom: 5%;
+    
+}
+.enroll-btn{
+
+    background-color: rgb(58, 58, 247);
+    font-size: 2.5vh;
+    /* border-radius: 0.5rem; */
+
+    padding: 0.5%;
+
+    padding-right: 12%;
+    padding-left: 12%;
+
+
+    /* background-image: 
+    linear-gradient(90deg, rgb(187, 36, 16), blue); */
+
+    color: whitesmoke;
+    font-weight: bold;
+
+}
+
+
+
+.course-container{
+    /* outline: 2px solid black; */
+
+    display: flex;
+    /* overflow: hidden; */
+
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+}
+
+.course-overview{
+    display: grid;
+
+    width: 80%;
+
+    margin-right: 5%;
+
+}
+
+.welcome-video{
+    /* display: grid; */
+    width: 80%;
+
+    margin-top:2%;
+
+
+}
+
+.video1{
+    
+}
+
+.course-note{
+    width: 100%;
+
+    margin-top: 8%;
+
+    line-height: 1.6;
+
 }
