--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,62 +1,95 @@
 .nav {
-  /* margin-top: -20px; */
-  /* background-size: cover; */
-  /* height: 100vh; */
-  /* background-repeat: no-repeat; */
-
-  /* outline: 2px solid black; */
   border-bottom: 1px solid rgb(161, 157, 157);
+}
+
+.navbar-menu {
+  display: flex;
+  justify-content: space-around;
+  /* justify-content: center; */
+
+  /* margin-bottom: 0.1%; */
+
+  padding-top: 0;
+
   
 }
 
-.navbar-menu{
-    display: flex;
-    justify-content: space-around;
-
-    /* font-size: small; */
-
-    
-}
-
-.home-nav{
+.home-nav {
   color: rgb(0, 3, 5);
   text-decoration: none;
-  font-size: 2.5vh;
+  font-size: 100%;
 
 }
+.logo {
+  height: 3rem;
+  border-radius: 6rem;
+  margin-top: 2%;
+}
 
-.search-container{
+.search-container {
   /* border-bottom: rgb(10, 10, 9); */
+  height: 60%;
   display: flex;
   border-style: groove;
+  border-radius: 50px;
 
-  padding-left: 1%;
-  padding-top: 1%;
-  padding-bottom: 0.5%; 
-  padding-right: 11%;
-
-  
+  padding-left: 1.8%;
+  padding-top: 0.5%;
+  padding-bottom: 0.5%;
+  padding-right: 10%;
 }
 
-.search-bar{
+.search-bar {
   border: none;
   font-size: 2vh;
 
   /* color: rgb(0, 3, 5);
-  text-decoration: none;
-  border-radius: 5%; */
-
+  /* text-decoration: none; */
 }
-
-.search-btn{
-  border: none;
-  background-color:none;
-
-  justify-content: end;
-}
-
-.search-btn:focus{
+.search-bar:focus {
   border: none;
   outline: none;
 }
 
+/* .search-btn{
+  border: none;
+  background-color:none;
+
+  justify-content: end;
+} */
+.dropbtn {
+  background-color: #081480;
+  color: white;
+  padding: 0.8rem;
+
+
+  font-size: 16px;
+  border: none;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #6e3e8e;}
