--- a/src/components/TopCourses/TopCourses.css
+++ b/src/components/TopCourses/TopCourses.css
@@ -33,6 +33,7 @@
 .python-description{
     /* background: blue; */
     /* width: 100%; */
+
     height: 20vh;
 
     padding-left: 10%;
@@ -43,7 +44,7 @@
     padding-left: 25%;
     padding-top: 20%;
 
-    color: rgb(247, 233, 38);
+    color: rgb(12, 28, 78);
     /* gap: 10%; */
 }
 
@@ -76,16 +77,18 @@
 .js-description{
     /* background: blue; */
     /* width: 100%; */
+    text-align: center;
     height: 23vh;
 
     padding-left: 10%;
+    padding-top: 10%;
 
 }
 
 .js-stars{
-    padding-left: 25%;
+    /* padding-left: 25%; */
     padding-top: 20%;
 
-    color: rgb(247, 233, 38);
+    color: rgb(30, 35, 104);
     /* gap: 10%; */
 }
