--- a/src/pages/Dashboard/Dashboard.css
+++ b/src/pages/Dashboard/Dashboard.css
@@ -4,6 +4,12 @@
 }
 .Container {
   /* outline: 2px solid red; */
+
+  display: flex;
+  
+}
+
+.dash-side-bar{
   width: 20%;
   height: 100% !important;
   border-radius: 2rem;
@@ -16,6 +22,7 @@
     width: 100%;
     height: max-content !important;
   }
+
 }
 
 .ProfileContainer {
