--- a/src/pages/Sign-up/Sign-up.css
+++ b/src/pages/Sign-up/Sign-up.css
@@ -1,95 +1,119 @@
-.form-page{
-    background-color: rgb(75, 173, 157);
+.form-page {
+  /* background-color: aqua; */
 }
 
-.form-container{
-    display: flex;
-    justify-content: center;
-    /* align-content: flex-start; */
-    /* flex-wrap: nowrap; */
+.form-container {
+  /* outline: chartreuse 2px solid; */
 
-    outline: chartreuse 2px solid;
+  display: flex;
+  justify-content: center;
 
-    margin-left: 15%;
-    margin-right: 15%;
-
-
-    /* box-shadow: 5px 5px 7px 5px #888888; */
-
-    
+  margin-left: 15%;
+  margin-right: 15%;
 }
 
-.form-left-side-pic{
-    outline: brown 2px solid;
-    width: 100%;
-    margin-top: 15%;
-    margin-bottom: 15%;
+.main-form {
+  /* outline: 2px solid black; */
+  /* background-color: whitesmoke; */
 
+  width: 50%;
+
+  margin-top: 8%;
+  margin-bottom: 15%;
+
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+
+  
 }
 
-.main-form{
-    outline: 2px solid black;
-    
-    width: 100%;
-   
-
-    margin-top: 15%;
-    margin-bottom: 15%;
-
-    display: grid;
-
+.sign-up-title{
     text-align: center;
-
-    padding:20px;
-    font-family: 'Helvetica', serif;
-
-
+    margin-top: 5%;
+    margin-bottom: 10%;
 
 }
 
-h3{
-    font-size: 1.5em;
+.form-group {
+  font-family: "Helvetica", serif;
+  /* background-color: whitesmoke; */
+
+  width: 100%;
+
+  padding-left: 10%;
+  padding-right: 10%;
+
+  margin-bottom: 5%;
+  margin-top: 5%;
+
+  border-bottom: 2px solid #767474;
 }
 
-.form-group{
-    /* background-color: rgb(236, 234, 230); */
-
-    font-family: 'Helvetica', serif;
-    width: 100%;
-    font-size: 20px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    border: none;
-    border-bottom: 2px solid #767474;
-    
-}
-
-.fname{
-    
+.form-control{
+    border-style: hidden;
+    outline: none;
 
 }
-
-.lname{
-    
+.firstname {
+    margin-bottom: 10%;
+    border-bottom: 1px solid #767474;
+  
 }
 
-.e-address{
-    
+.lastname {
+    margin-bottom: 10%;
+    border-bottom: 1px solid #767474;
 }
 
-.password{
-    
+.email {
+    margin-bottom: 10%;
+    border-bottom: 1px solid #767474;
 }
 
-.btn-sign-up{
-    font-family: 'Helvetica', serif;
-    width: 35%;
-    height: 50%;
-    background-color: #202b03;
-    border: none;
-    color: white;
-    font-size: 100%;
-    /* padding: 16px 32px; */
-    /* margin: 4px 2px; */
-    border-radius: 5%;
+.password {
+    margin-bottom: 16%;
+    border-bottom: 1px solid #767474;
+}
+
+.btn-sign-up {
+  display: flex;
+  justify-content: center;
+  background-color: midnightblue;
+  font-size: 1.5vh;
+  border-radius: 1rem;
+
+  width: 50%;
+  margin-left: 25%;
+  margin-bottom: 12%;
+
+  padding: 2%;
+
+  /* padding-right: 1%;
+  padding-left: 3%; */
+
+  background-image: linear-gradient(90deg, red, blue);
+
+  color: whitesmoke;
+}
+
+.forgot-password {
+  width: 100%;
+
+  display: flex;
+  justify-content: center;
+
+  margin-bottom: 12%;
+
+  /* outline: chartreuse 2px solid; */
+}
+
+.or-login {
+  width: 100%;
+  height: 100%;
+  margin-left: 20%;
+
+  /* border-radius: 1rem;
+    padding-left: 2%;
+    padding-right: 2%; */
+
+  /* outline: chartreuse 2px solid; */
 }
