--- a/src/components/BecomeStudent/BecomeStudent.css
+++ b/src/components/BecomeStudent/BecomeStudent.css
@@ -1,12 +1,20 @@
+.student-div{
+    display: flex;
+    background-color:  rgb(17, 1, 17);
+    margin-bottom: 5%;
+
+    margin-top: 3%;
+
+
+    /* justify-content: center; */
+}
+
 .overlayon{
-    outline: 2px solid red;
-    /* width: 100%; */
+    /* outline: 2px solid red; */
+    width: 50%;
+    height: 50%;
+    /* margin-left: 10%; */
 
-
-
-    object-fit: cover;
-
-    
 }
 
 .fade-img{
@@ -14,10 +22,16 @@
     width: 100%;
 
 
-    height: auto;
+}
 
+.student-welcome{
+    /* text-align: center; */
+    margin-left: 8% ;
+    padding-top: 13%;
+    /* padding-bottom: 5%; */
+}
 
-    /* padding-bottom: 30%; */
-
-
+.welcome-std{
+    color: white;
+    font-weight: bold;
 }
