--- a/src/components/Frameworks/Frameworks.css
+++ b/src/components/Frameworks/Frameworks.css
@@ -35,17 +35,11 @@
     /* width: 100%; */
     height: 20vh;
 
-    padding-left: 10%;
+    /* padding-left: 10%; */
 
 }
 
-.py-stars{
-    padding-left: 25%;
-    padding-top: 20%;
 
-    color: rgb(247, 233, 38);
-    /* gap: 10%; */
-}
 
 
 
@@ -57,7 +51,7 @@
 
 
     /* box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset; */
-
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
     margin-right: 2%;
     margin-left: 5%;
     /* padding: 1%; */
@@ -78,14 +72,12 @@
     /* width: 100%; */
     height: 23vh;
 
-    padding-left: 10%;
 
 }
 
-.js-stars{
-    padding-left: 25%;
-    padding-top: 20%;
 
-    color: rgb(247, 233, 38);
-    /* gap: 10%; */
+.description-py{
+    text-align: center;
+
+    margin-top: 5%;
 }
